# cpp_study

rtb_prototype/: CMakeLists.txt  README.md
rtb_prototype/cmake/: GeneralCompilationFlags.cmake
rtb_prototype/doc/: NTSCompatibility.md
rtb_prototype/grpc_proto/: CMakeLists.txt  rtb.proto
rtb_prototype/server/: CMakeLists.txt  main.cpp
rtb_prototype/server/data/: IDataProvider.h
rtb_prototype/server/data/memory/: MemoryDataProvider.cpp  MemoryDataProvider.h
rtb_prototype/server/interface/grpc/: GRPC.cpp  GRPC.h
rtb_prototype/server/service/: IService.h  RTBService.cpp  RTBService.h  ServiceErrors.h
rtb_prototype/test/unit/: CMakeLists.txt
